--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ pytesseract       # Python wrapper for Tesseract OCR
 opencv-python     # For image processing and format conversion
 Pillow            # Required by pyautogui and pytesseract
 numpy             # Used with OpenCV for image array manipulation
+pygetwindow       # Detect and target the active window for focused screen capture
